{
    "name": "InputActions",
    "maps": [
        {
            "name": "Hero Move Control",
            "id": "974368e7-f2bc-4ede-ae9c-e164a0a68f28",
            "actions": [
                {
                    "name": "MoveClick",
                    "type": "Button",
                    "id": "c629e001-c495-4329-921c-f25dc5cf074b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MovePosition",
                    "type": "Value",
                    "id": "c11fcf33-859c-40fe-a9fc-8dac9be7043e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "c296d947-a508-4204-8077-fc4cafcc69ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackClick",
                    "type": "Button",
                    "id": "e2c2da1b-cf04-44c4-b3c3-2a267112f9da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7866c17b-a2f1-4076-80f0-40c3a2ba7fe3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MoveClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "970fedac-6f60-4ffd-a492-8c8b92fc0f7b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f4d1b72-a13a-4159-9c26-369720901d37",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42efe3d9-8a30-4f8c-b0f1-75e74466c72d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "AttackClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera Control",
            "id": "2d7e8112-e020-446e-b085-e98b379d1b38",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "2724a6a6-f0c9-4715-b3b7-d85600b6a711",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackPlayerHero",
                    "type": "Button",
                    "id": "d89ff36a-68ce-40de-9598-e0c4dd963f8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d98a7565-d28c-4058-b6cd-5d21baee5d60",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b6b7f88b-ccbb-41ae-8094-9049eaca8d27",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "04aafe01-8b43-4a4b-b0c2-9aeb1d38b642",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cd49465-c195-431d-b5d8-64d1c4898ea0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ce4040d5-99e6-4a0a-bf0b-23fe42fc4bdc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0290463e-4547-4039-b033-6c9bb41e7892",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "TrackPlayerHero",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hero Skills Control",
            "id": "ef7d0aae-7244-4ec1-890b-e6f83e3db0ac",
            "actions": [
                {
                    "name": "Skill 1",
                    "type": "Button",
                    "id": "e1d2a63d-92c8-4a5d-afb5-c3001fd0f222",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill 2",
                    "type": "Button",
                    "id": "0984182d-2168-4f2b-89d4-a275a4bd829e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill 3",
                    "type": "Button",
                    "id": "bfa71e4b-db65-405e-8e59-da56884000fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill 4",
                    "type": "Button",
                    "id": "ea739b31-8dda-4125-b73f-f3ea7d62abed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13842fb0-5f1c-4634-a782-9237d0f2a4c2",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Skill 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11dbe21d-bad6-4d22-80c1-9033c0874971",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Skill 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "646c4bf4-8f14-46f4-ad81-a2896a788563",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Skill 3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f70f9af8-bc97-4c86-83df-42e7ceeb7fe4",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Skill 4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}